# tfhe-rs-fraud-inference

./: .gitignore  Cargo.toml  README.md  requirements.txt
data/: LR_weights_quantized.json
data/processed/: scaled_features.parquet
scripts/: extract_lr_weights.py  generate_test_data.py  preprocess.py  smoke_test_RF.py  train_plaintext_ofc.py
src/: config.rs  encryption.rs  he_client.rs  main.rs  server.rs
