[package]
name = "fhe_fraud_detection"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- FHE & Serialization (The new stuff) ---
tfhe = { version = "0.6", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Data Science & Parallelism (Restoring the missing stuff) ---
# Polars for DataFrame handling
polars = { version = "0.36", features = ["lazy", "random", "ndarray", "strings", "parquet"] }
# Rayon for parallel iterators (par_iter)
rayon = "1.8"
# Rand for dummy data generation
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
